# copa

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml
copa/: __init__.py  cli.py  copa.py  toc.yml
copa/conf/: README  toc.yml
copa/core/: execute.py  logging.py  toc.py  typer.py
copa/core/logging/: __init__.py  logging.py  setup.py  verbosity.py
docs/: .gitkeep  mkdocs.yml
docs/source/: CNAME  index.md
docs/source/developer-guide/: publishing.md
docs/source/getting-started/: configuration.md  installation.md  quickstart.md
docs/source/user-guide/: commands.md  playbooks.md  python-functions.md
tests/: __init__.py  test_cli.py  test_register_commands.py  test_verbosity.py  test_wx.py
