[project]
name = "copa"
version = "0.1.2"
description = "Configure, Orchestrate and Provision Applications"
readme = "README.md"
authors = [
  { name="Ian Edwards", email="ian@myacorn.com" },
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "ansible",
  "ansible-runner",
  "pyyaml",
  "textual",
  "typer~=0.16.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]
docs = ["mkdocs-material"]

[project.scripts]
copa = "copa.copa:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["copa"]

[tool.setuptools.package-data]
"copa" = ["conf/*"]
